@@ -1,3 +1,10 @@
+Thu May 25 16:06:06 BST 2006  Olly Betts <olly@survex.com>
+
+	* api/omdatabase.cc,backends/database.cc,common/database.h:
+	  Merge Xapian::Internal::open_database() into the Xapian::Database
+	  ctor which calls it; merge Xapian::Internal::open_writable_database()
+	  into the Xapian::WritableDatabase ctor which calls it.
+
 Wed May 24 08:28:40 BST 2006  Olly Betts <olly@survex.com>
 
 	* net/socketserver.cc: OmLineBuf -> OmSocketLineBuf.
